[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyrestsdk"
authors = [{name = "michaeldcanady"}]
readme = "Readme.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "certifi==2022.12.7",
    "charset-normalizer==3.0.1",
    "idna==3.4",
    "requests==2.28.2",
    "StrEnum==0.4.9",
    "urllib3==1.26.14",
]

[project.urls]
homepage = "https://github.com/michaeldcanady/pyrestsdk#readme"
repository = "https://github.com/michaeldcanady/pyrestsdk"

[tool.flit.module]
name = "pyrestsdk"

[tool.mypy]
warn_unused_configs = true
files = "pyrestsdk"
ignore_missing_imports = true

[tool.yapf]
based_on_style = "pep8"
dedent_closing_brackets = true
each_dict_entry_on_separate_line = true
column_limit = 100

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]