[tool.poetry]
name = "pyrestsdk"
version = "0.0.0"
description = "a toolkit to make writing SDKs in python simple"
authors = ["Michael Canady"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
style = "semver"

[tool.poetry.dependencies]
python = "^3.8"
StrEnum = "^0.4.10"
requests = "^2.28.2"
requests-kerberos = "^0.14.0"
sphinx-autoapi = "^2.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
sphinx-press-theme = "^0.8.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
